deploy: 16371b1737a2d44ab99c912d035230dc8036d770

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html><head><title>A2K React Seed</title><base href="/"><meta http-equiv="Content-type" content="text/html; charset=utf-8"><meta http-equiv="x-ua-compatible" content="ie=edge"><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"></head><body><noscript>Please enable JavaScript to view this site.</noscript><script>(function () {
+<!doctype html><html><head><title>A2K React Seed</title><meta http-equiv="Content-type" content="text/html; charset=utf-8"><meta http-equiv="x-ua-compatible" content="ie=edge"><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"></head><body><noscript>Please enable JavaScript to view this site.</noscript><script>(function () {
         // Change these if you use something different in your hook.
         var storageKey = 'darkMode';
         var classNameLight = 'theme-0';
