deploy: 8bd77c017f69e4e77db9e1bae7e5cee45f4de550

--- a/index.html
+++ b/index.html
@@ -34,4 +34,4 @@
           var isDarkMode = document.body.classList.contains(classNameDark);
           localStorage.setItem(storageKey, JSON.stringify(isDarkMode));
         }
-      })();</script><article id="root"></article><script src="main.bundle.js"></script></body></html>
+      })();</script><article id="root"></article><script defer="defer" src="main.bundle.js"></script></body></html>
