--- a/index.html
+++ b/index.html
@@ -34,4 +34,4 @@
           var isDarkMode = document.body.classList.contains(classNameDark);
           localStorage.setItem(storageKey, JSON.stringify(isDarkMode));
         }
-      })();</script><article id="root"></article><script defer="defer" src="main.bundle.js"></script></body></html>
+      })();</script><article id="root"></article><script defer="defer" src="main.4fb895668fe4afc012320abf413f58cfedd95f0b.js"></script></body></html>
