--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html><head><title>A2K React Seed</title><meta http-equiv="Content-type" content="text/html; charset=utf-8"><meta http-equiv="x-ua-compatible" content="ie=edge"><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"></head><body><noscript>Please enable JavaScript to view this site.</noscript><script>(function () {
+<!doctype html><html><head><title>A2K React Seed</title><meta http-equiv="Content-type" content="text/html; charset=utf-8"><meta http-equiv="x-ua-compatible" content="ie=edge"><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"><link rel="preconnect" href="https://fonts.gstatic.com"><link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet"></head><body><noscript>Please enable JavaScript to view this site.</noscript><script>(function () {
         // Change these if you use something different in your hook.
         var storageKey = 'darkMode';
         var classNameLight = 'theme-0';
@@ -34,4 +34,4 @@
           var isDarkMode = document.body.classList.contains(classNameDark);
           localStorage.setItem(storageKey, JSON.stringify(isDarkMode));
         }
-      })();</script><article id="root"></article><script defer="defer" src="main.4fb895668fe4afc012320abf413f58cfedd95f0b.js"></script></body></html>
+      })();</script><article id="root"></article><script defer="defer" src="main.3b241bdc0aa1a254e687167555337f69cd23cfe2.js"></script></body></html>
